# ok-covid19-datasette

./: .gitignore  README.md  build_database.py  extract.py  extract_utils.py  fetch_documents.py  fetch_homepage.py  fetch_news.py  generate_test_data.py  metadata.json  parse_news.py  pyproject.toml  test.py  test_extract.py  test_news.py
.github/workflows/: deploy.yaml  fetch.yaml  fetch_all_eo_reports.yaml  fetch_all_news.yaml  fetch_homepage.yaml  fetch_latest_eo_reports.yaml  fetch_latest_news.yaml  test.yaml
data/html/: osdh-homepage-2020-03-29_1533.html  osdh-homepage-2020-03-30_1106.html  osdh-homepage-2020-03-31_1511.html  osdh-homepage-2020-04-01_1824.html  osdh-homepage-2020-04-02_1438.html  osdh-homepage-2020-04-03_1110.html  osdh-homepage-2020-04-04_1110.html  osdh-homepage-2020-04-04_1125.html  osdh-homepage-2020-04-05_1110.html  osdh-homepage-2020-04-06_1110.html  osdh-homepage-2020-04-06_1140.html  osdh-homepage-2020-04-07_1155.html  osdh-homepage-2020-04-08_1110.html  osdh-homepage-2020-04-08_1240.html  osdh-homepage-2020-04-09_1155.html  osdh-homepage-2020-04-09_1340.html  osdh-homepage-2020-04-10_1110.html  osdh-homepage-2020-04-10_1125.html  osdh-homepage-2020-04-11_1110.html  osdh-homepage-2020-04-11_1125.html  (+20 more)
test-data/: 3.25_covid-19_report_correct.txt  covid-19_report-5.txt  covid-19_report-6.txt  eo_-_covid-19_report_-_3-22-20.txt  eo_-_covid-19_report_-_3-23-20.txt  eo_-_covid-19_report_-_3-24-20.txt  eo_-_covid-19_report_-_3-31-20.txt  eo_-_covid-19_report_-_4-1-20.txt  eo_-_covid-19_report_-_4-2-20.txt  eo_-_covid-19_report_2_-_3-30-20.txt
(+279 files in other folders)
