[tool.poetry]
name = "ok-covid19"
version = "0.1.0"
description = ""
authors = ["Chris Hasenpflug <chris@hasenpflug.net>"]

[tool.poetry.dependencies]
python = "^3.8"
tika = "^1.24"
scrapy = "^2.0.1"
python-dateutil = "^2.8.1"
datasette = "^0.39"
sqlite_utils = "^2.4.4"
click = "^7.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
